--- a/app/src/main/res/layout-land/main_fragment_land.xml
+++ b/app/src/main/res/layout-land/main_fragment_land.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center"
-        android:text="Landscapee"
+        android:text="Landscape"
         android:textSize="@dimen/size_text"
         android:gravity="center_vertical|center_horizontal"/>
 
